Set up connection string

--- a/CPW219-eCommerceSite/appsettings.json
+++ b/CPW219-eCommerceSite/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(locabdb)\\mssqllocaldb;Database=CPW219CafeMenu;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
