--- a/CPW219-eCommerceSite/appsettings.json
+++ b/CPW219-eCommerceSite/appsettings.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CPW219Menu;Trusted_Connection=True; Encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+
     }
   },
   "AllowedHosts": "*"
