Coded Add to cart, Remove from cart, and added a cart summary page

--- a/CPW219-eCommerceSite/CPW219-eCommerceSite.csproj
+++ b/CPW219-eCommerceSite/CPW219-eCommerceSite.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Views\Cart\Summary.cshtml~RF16f89c8.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
       <PrivateAssets>all</PrivateAssets>
